--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/router": "~8.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-csv-parser": "0.0.3",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
