--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "angular-neo4j": "^0.8.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ngx-csv-parser": "0.0.3",
